Rectifications, adding of parsing module and failsafes for Threaded-Installer

--- a/Main/Settings.ini
+++ b/Main/Settings.ini
@@ -3,4 +3,8 @@ IntegrityCheckup=true
 CheckForUpdates=true
 [General]
 Language=EN
-Theme=Dark
+Theme=
+[Advanced]
+MainLoopRefreshRate=50
+ConfigLinkUpdateCounter=40
+InternetCheckUpdateCounter=100
