integration of modular config panels

--- a/Main/Settings.ini
+++ b/Main/Settings.ini
@@ -4,8 +4,13 @@ CheckForUpdates=true
 [General]
 Language=EN
 Theme=
+DefaultAutoRefreshConfig=false
+DefaultAutoRefreshApp=true
 [Advanced]
 MainLoopRefreshRate=50
 ConfigLinkUpdateCounter=40
+ConfigPanelUpdateCounter=150
 InternetCheckUpdateCounter=100
 RefreshAppLoopCounter=250
+MainUiTimerInterval=1000
+MainFormLoadLoopCounter=500
