--- a/Main/Assets/config/Default.config
+++ b/Main/Assets/config/Default.config
@@ -90,3 +90,14 @@ TaskType=Misc
 DisplayName=Check Windows Activation
 DefaultState=true
 ScriptPath=false
+
+[REMINDDEFAULT]
+TaskType=End of Configuration
+DisplayName=Open Default App Menu
+DefaultState=true
+ScriptPath=false
+[RESTATEND]
+TaskType=End of Configuration
+DisplayName=Restart the computer
+DefaultState=true
+ScriptPath=false
