--- a/Main/Settings.ini
+++ b/Main/Settings.ini
@@ -4,6 +4,7 @@ CheckForUpdates=true
 [General]
 Language=EN
 Theme=
+DeleteOnExit=prompt
 DefaultAutoRefreshConfig=false
 DefaultAutoRefreshApp=true
 [Advanced]
