Settings ui and script basic working

--- a/Main/Settings.ini
+++ b/Main/Settings.ini
@@ -1,17 +1,20 @@
+﻿[General]
+DeleteOnExit=prompt
+Theme=Dark
+Language=EN
+DefaultAutoRefreshApp=true
+DefaultAutoRefreshConfig=false
+
 [Startup]
 IntegrityCheckup=true
 CheckForUpdates=true
-[General]
-Language=EN
-Theme=
-DeleteOnExit=prompt
-DefaultAutoRefreshConfig=false
-DefaultAutoRefreshApp=true
+
 [Advanced]
-MainLoopRefreshRate=50
-ConfigLinkUpdateCounter=40
-ConfigPanelUpdateCounter=150
-InternetCheckUpdateCounter=100
 RefreshAppLoopCounter=250
 MainUiTimerInterval=1000
+ConfigPanelUpdateCounter=150
+ConfigLinkUpdateCounter=40
+InternetCheckUpdateCounter=100
 MainFormLoadLoopCounter=500
+MainLoopRefreshRate=50
+
