--- a/Main/Settings.ini
+++ b/Main/Settings.ini
@@ -1,20 +1,19 @@
-﻿[General]
-DeleteOnExit=prompt
-Theme=Dark
-Language=EN
-DefaultAutoRefreshApp=true
-DefaultAutoRefreshConfig=false
+﻿[Advanced]
+ConfigPanelUpdateCounter=150
+MainLoopRefreshRate=50
+ConfigLinkUpdateCounter=40
+MainFormLoadLoopCounter=500
+InternetCheckUpdateCounter=100
+MainUiTimerInterval=1000
+RefreshAppLoopCounter=250
 
 [Startup]
 IntegrityCheckup=true
 CheckForUpdates=true
 
-[Advanced]
-RefreshAppLoopCounter=250
-MainUiTimerInterval=1000
-ConfigPanelUpdateCounter=150
-ConfigLinkUpdateCounter=40
-InternetCheckUpdateCounter=100
-MainFormLoadLoopCounter=500
-MainLoopRefreshRate=50
-
+[General]
+DeleteOnExit=prompt
+DefaultAutoRefreshConfig=false
+Language=EN
+DefaultAutoRefreshApp=true
+Theme=Dark
