--- a/Main/Settings.ini
+++ b/Main/Settings.ini
@@ -1,7 +1,6 @@
 ﻿[Advanced]
 ConfigPanelUpdateCounter=150
 MainLoopRefreshRate=50
-ConfigLinkUpdateCounter=40
 MainFormLoadLoopCounter=500
 InternetCheckUpdateCounter=100
 MainUiTimerInterval=1000
@@ -14,6 +13,8 @@ CheckForUpdates=true
 [General]
 DeleteOnExit=prompt
 DefaultAutoRefreshConfig=false
-Language=EN
 DefaultAutoRefreshApp=true
+
+[Appearance]
+Language=EN
 Theme=Dark
